Finish build of website. Make sections responsive. | Update #2 |

--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -13,6 +13,23 @@
     <title>Markit Marketing Company</title>
 </head>
 <body>
+
+    <!-- NAVIGATION | START -->
+    <div class="nav-wrap">
+        <nav class="navigation uk-flex">
+            <div class="navigation__left">
+                <a href="#">LOGO</a>
+            </div>
+            <div class="navigation__right uk-flex uk-margin-remove">
+                <h3>Solutions</h3>
+                <h3>News</h3>
+                <h3>Culture</h3>
+                <h3>Cards</h3>
+            </div>
+        </nav>
+    </div>
+    <!-- NAVIGATION | END -->
+
     <!-- HEADER | START -->
     <header class="header uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light">
         <div class="header__content">
@@ -55,6 +72,7 @@
             </div>
         </section>
         <!-- SERVICES SECTION | END -->
+
         <!-- SERVICE DETAILS SECTION | START -->
         <section class="details uk-flex uk-flex-left uk-flex-middle uk-light">
             <div class="details__content uk-margin-large-left">
@@ -67,6 +85,7 @@
             </div>
         </section>
         <!-- SERVICE DETAILS SECTION | END -->
+
         <!-- CLIENT EXPERIENCE SECTION | START -->
         <section class="client-experience uk-flex uk-flex-middle uk-flex-left uk-margin-large-top uk-margin-large-bottom uk-grid-small uk-child-width-expand@s" uk-grid>
             <div class="client-experience__left">
@@ -79,6 +98,7 @@
             </div>
         </section>
         <!-- CLIENT EXPERIENCE SECTION | END -->
+
         <!-- NEWS SECTION | START -->
         <section class="news uk-flex-center uk-margin-large-top">
             <h2 class="uk-text-center uk-padding-large">Lorem ipsum dolor sit amet consectetur <br>adipiscing elit sed do <span>eiusmod</span></h2>
@@ -91,11 +111,11 @@
                     </div>
                     <div class="news-block__content">
                         <h4>06.06.2019.</h4>
-                        <h3>Lorem ipsum dolor sit amet consectetur adipiscing elit</h3>
-                        <div class="news-block__content__genres">
-                            <h3>news</h3>
-                            <h3>tech</h3>
-                            <h3>efficency</h3>
+                        <h3 class="uk-margin-remove">Lorem ipsum dolor sit amet consectetur adipiscing elit</h3>
+                        <div class="news-block__content__genres uk-margin-medium-bottom uk-margin-medium-top">
+                            <h3 class="uk-margin-remove-bottom uk-margin-medium uk-margin-small-right">news</h3>
+                            <h3 class="uk-margin-medium uk-margin-small-right">tech</h3>
+                            <h3 class="uk-margin-medium">efficency</h3>
                         </div>
                     </div>
                 </div>
@@ -106,11 +126,11 @@
                     </div>
                     <div class="news-block__content">
                         <h4>06.06.2019.</h4>
-                        <h3>Lorem ipsum dolor sit amet consectetur adipiscing elit</h3>
-                        <div class="news-block__content__genres">
-                            <h3>news</h3>
-                            <h3>tech</h3>
-                            <h3>efficency</h3>
+                        <h3 class="uk-margin-remove">Lorem ipsum dolor sit amet consectetur adipiscing elit</h3>
+                        <div class="news-block__content__genres uk-margin-medium-bottom uk-margin-medium-top">
+                            <h3 class="uk-margin-remove-bottom uk-margin-medium uk-margin-small-right">business</h3>
+                            <h3 class="uk-margin-medium uk-margin-small-right">marketing</h3>
+                            <h3 class="uk-margin-medium">seo</h3>
                         </div>
                     </div>
                 </div>
@@ -121,19 +141,134 @@
                     </div>
                     <div class="news-block__content">
                         <h4>06.06.2019.</h4>
-                        <h3>Lorem ipsum dolor sit amet consectetur adipiscing elit</h3>
-                        <div class="news-block__content__genres">
-                            <h3>news</h3>
-                            <h3>tech</h3>
-                            <h3>efficency</h3>
+                        <h3 class="uk-margin-remove">Lorem ipsum dolor sit amet consectetur adipiscing elit</h3>
+                        <div class="news-block__content__genres uk-margin-medium-bottom uk-margin-medium-top">
+                            <h3 class="uk-margin-remove-bottom uk-margin-medium uk-margin-small-right">statistics</h3>
+                            <h3 class="uk-margin-medium uk-margin-small-right">company</h3>
+                            <h3 class="uk-margin-medium">sales</h3>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="news__bottom-content">
+                <h3 class="news__news-res" style="width: 100%;">Total News Result (60)</h3>
+                <div class="news__button-wrap">
+                    <i class="icon ion-ios-arrow-back uk-margin-small-right"></i>
+                    <i class="icon ion-ios-arrow-forward"></i>
+                </div>
+            </div>
         </section>
         <!-- NEWS SECTION | END -->
+
+        <!-- TESTIMONIALS SECTION | START -->
+        <section class="testimonials">
+            <i class="icon ion-md-quote q-1"></i>
+            <i class="icon ion-md-quote q-2"></i>
+
+            <div class="slider" uk-slider>
+                <ul class="uk-slider-items uk-child-width-1-1@s uk-light">
+                    <li class="uk-transition-toggle" tabindex="0">
+                        <div class="uk-position-center uk-panel uk-height-1-1 testimonial-text">
+                            <h2>"Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dotore <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod."</h2>
+                            <div class="testimonial-client-data uk-margin-xlarge-top">
+                                <h3>Partner One From Company</h3>
+                                <h4 class="uk-margin-remove">Partners role in the company that left review</h4>     
+                            </div>
+                        </div>
+                    </li>
+                    <li class="uk-transition-toggle" tabindex="0">
+                        <div class="uk-position-center uk-panel uk-height-1-1 testimonial-text">
+                            <h2>"Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dotore <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod."</h2>
+                            <div class="testimonial-client-data uk-margin-xlarge-top">
+                                <h3>Partner Two From Company</h3>
+                                <h4 class="uk-margin-remove">Partners role in the company that left review</h4>
+                            </div>        
+                        </div>
+                    </li>
+                    <li class="uk-transition-toggle" tabindex="0">
+                        <div class="uk-position-center uk-panel uk-height-1-1 testimonial-text">
+                            <h2>"Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dotore <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod."</h2>
+                            <div class="testimonial-client-data uk-margin-xlarge-top">
+                                <h3>Partner Three From Company</h3>
+                                <h4 class="uk-margin-remove">Partners role in the company that left review</h4>
+                            </div> 
+                        </div>
+                    </li>
+                    <li class="uk-transition-toggle" tabindex="0">
+                        <div class="uk-position-center uk-panel uk-height-1-1 testimonial-text">
+                            <h2>"Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dotore <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod."</h2>
+                            <div class="testimonial-client-data uk-margin-xlarge-top"> 
+                                <h3>Partner Four From Company</h3>
+                                <h4 class="uk-margin-remove">Partners role in the company that left review</h4>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+                <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin uk-margin-large-top mini-nav"></ul>
+            </div>
+
+        </section>
+        <!-- TESTIMONIALS SECTION | END -->
+
+        <!-- PARTNERS SECTION | START -->
+        <section class="partners uk-flex-center uk-text-center uk-margin-large-left uk-margin-large-right uk-padding-large">
+            <div class="logos uk-flex-center uk-flex-middle uk-margin-medium-top uk-margin-medium-bottom">
+                <img src="../img/amazon-logo.jpg" alt="Amazon Logo" class="uk-margin-xlarge-right logo-1">
+                <img src="../img/facebook-logo.jpg" alt="Facebook Logo" class="uk-margin-xlarge-right logo-2">
+                <img src="../img/google-logo.jpg" alt="Google Logo" class="uk-margin-xlarge-right logo-3">
+                <img src="../img/uber-logo.png" alt="Uber Logo" class="logo-4">
+            </div>
+        </section>
+        <!-- PARTNERS SECTION | END -->
     </main>
 
+    <!-- FOOTER | START -->
+    <footer class="footer uk-flex uk-flex-center uk-flex-nowrap uk-flex-around uk-child-width-expand@s" uk-height-viewport="offset-bottom: 30" uk-grid>
+        <div class="footer-left uk-flex-flex uk-flex-middle uk-width-1-1@s uk-child-width-expand@s">
+            <h2>LOGO</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore.</p>
+            <h3>Design by AndreasDEV. 2019.</h3>
+        </div>
+        <div class="footer-right uk-flex uk-child-width-expand@s uk-width-1-1@s" uk-grid>
+            <div class="uk-width-1-4@l">
+                <h4 class="uk-h2">Services</h4>
+                <ul class="uk-list uk-list-large">
+                    <li class="uk-h3 fel uk-margin-remove">partners</li>
+                    <li class="uk-h3 fel uk-margin-remove">company</li>
+                    <li class="uk-h3 fel uk-margin-remove">statistics</li>
+                    <li class="uk-h3 fel uk-margin-remove">goals</li>
+                </ul>
+            </div>
+            <div class="uk-width-1-4@l"> 
+                <h4 class="uk-h2">Quick Nav</h4>
+                <ul class="uk-list uk-list-large">
+                    <li class="uk-h3 fel uk-margin-remove">solutions</li>
+                    <li class="uk-h3 fel uk-margin-remove">news</li>
+                    <li class="uk-h3 fel uk-margin-remove">culture</li>
+                    <li class="uk-h3 fel uk-margin-remove">cards</li>
+                </ul>
+            </div>
+            <div class="uk-width-1-4@l">
+                <h4 class="uk-h2">Benefits</h4>
+                <ul class="uk-list uk-list-large">
+                    <li class="uk-h3 fel uk-margin-remove">learn with us</li>
+                    <li class="uk-h3 fel uk-margin-remove">e-learning</li>
+                    <li class="uk-h3 fel uk-margin-remove">courses</li>
+                    <li class="uk-h3 fel uk-margin-remove">affilate</li>
+                </ul>
+            </div>
+            <div class="uk-width-1-4@l">
+                <h4 class="uk-h2">Social Media</h4>
+                <ul class="uk-list uk-list-large">
+                    <li class="uk-h3 fel uk-margin-remove uk-flex-center"><i class="icon ion-logo-facebook"></i>facebook</li>
+                    <li class="uk-h3 fel uk-margin-remove uk-flex-center"><i class="icon ion-logo-twitter"></i>twitter</li>
+                    <li class="uk-h3 fel uk-margin-remove uk-flex-center"><i class="icon ion-logo-instagram"></i>instagram</li>
+                    <li class="uk-h3 fel uk-margin-remove uk-flex-center"><i class="icon ion-logo-google"></i>google</li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    <!-- FOOTER | END -->
 
     <!-- UIkit JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.5/js/uikit.min.js"></script>
