Implement sticky navigation. Make sections responsive for all sizes. | Update #3 |

--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -15,18 +15,21 @@
 <body>
 
     <!-- NAVIGATION | START -->
-    <div class="nav-wrap">
-        <nav class="navigation uk-flex">
-            <div class="navigation__left">
-                <a href="#">LOGO</a>
+    <div class="uk-section-primary uk-preserve-color uk-position-top nav-big-wrap">
+    <div class="nav-wrap" uk-sticky="animation: uk-animation-slide-top; sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; cls-inactive: uk-navbar-transparent uk-light; top: 200">
+        <nav class="navigation uk-flex uk-flex-between uk-navbar-container" uk-navbar>
+            <div class="navigation__left uk-navbar-left uk-margin-medium-left uk-margin-small-top uk-margin-small-bottom">
+                <a href="#" class="uk-margin-remove uk-h1">LOGO</a>
             </div>
-            <div class="navigation__right uk-flex uk-margin-remove">
-                <h3>Solutions</h3>
-                <h3>News</h3>
-                <h3>Culture</h3>
-                <h3>Cards</h3>
+            <div class="navigation__right uk-flex uk-flex-middle uk-navbar-right uk-margin-small-top uk-margin-medium-right uk-margin-small-bottom">
+                <a href="#" class="uk-link-reset uk-margin-remove uk-padding-small uk-h2">Solutions</a>
+                <a href="#" class="uk-link-reset uk-margin-remove uk-padding-small uk-h2">News</a>
+                <a href="#" class="uk-link-reset uk-margin-remove uk-padding-small uk-h2">Culture</a>
+                <a href="#" class="uk-link-reset uk-margin-remove uk-padding-small uk-h2">Cards</a>
+                <a href="#" class="uk-link-reset uk-margin-remove uk-h1 uk-button signup-btn">Sign Up</a>
             </div>
         </nav>
+    </div>
     </div>
     <!-- NAVIGATION | END -->
 
@@ -75,7 +78,7 @@
 
         <!-- SERVICE DETAILS SECTION | START -->
         <section class="details uk-flex uk-flex-left uk-flex-middle uk-light">
-            <div class="details__content uk-margin-large-left">
+            <div class="details__content uk-margin-large-left uk-margin-large-right">
                 <h3>Details</h3>
                 <h2 class="uk-margin-remove-top">Lorem ipsum dolor sit amet <br>lorem ipsum dolor</h2>
                 <div class="details__content__buttons uk-flex uk-flex-left uk-flex-middle">
@@ -169,7 +172,7 @@
                 <ul class="uk-slider-items uk-child-width-1-1@s uk-light">
                     <li class="uk-transition-toggle" tabindex="0">
                         <div class="uk-position-center uk-panel uk-height-1-1 testimonial-text">
-                            <h2>"Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dotore <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod."</h2>
+                            <h2 class="uk-margin-small-right uk-margin-small-left">"Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dotore <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod."</h2>
                             <div class="testimonial-client-data uk-margin-xlarge-top">
                                 <h3>Partner One From Company</h3>
                                 <h4 class="uk-margin-remove">Partners role in the company that left review</h4>     
@@ -178,7 +181,7 @@
                     </li>
                     <li class="uk-transition-toggle" tabindex="0">
                         <div class="uk-position-center uk-panel uk-height-1-1 testimonial-text">
-                            <h2>"Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dotore <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod."</h2>
+                            <h2 class="uk-margin-small-right uk-margin-small-left">"Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dotore <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod."</h2>
                             <div class="testimonial-client-data uk-margin-xlarge-top">
                                 <h3>Partner Two From Company</h3>
                                 <h4 class="uk-margin-remove">Partners role in the company that left review</h4>
@@ -187,7 +190,7 @@
                     </li>
                     <li class="uk-transition-toggle" tabindex="0">
                         <div class="uk-position-center uk-panel uk-height-1-1 testimonial-text">
-                            <h2>"Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dotore <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod."</h2>
+                            <h2 class="uk-margin-small-right uk-margin-small-left">"Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dotore <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod."</h2>
                             <div class="testimonial-client-data uk-margin-xlarge-top">
                                 <h3>Partner Three From Company</h3>
                                 <h4 class="uk-margin-remove">Partners role in the company that left review</h4>
@@ -196,7 +199,7 @@
                     </li>
                     <li class="uk-transition-toggle" tabindex="0">
                         <div class="uk-position-center uk-panel uk-height-1-1 testimonial-text">
-                            <h2>"Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dotore <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod."</h2>
+                            <h2 class="uk-margin-small-right uk-margin-small-left">"Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dotore <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor <br>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod."</h2>
                             <div class="testimonial-client-data uk-margin-xlarge-top"> 
                                 <h3>Partner Four From Company</h3>
                                 <h4 class="uk-margin-remove">Partners role in the company that left review</h4>
@@ -212,10 +215,10 @@
 
         <!-- PARTNERS SECTION | START -->
         <section class="partners uk-flex-center uk-text-center uk-margin-large-left uk-margin-large-right uk-padding-large">
-            <div class="logos uk-flex-center uk-flex-middle uk-margin-medium-top uk-margin-medium-bottom">
-                <img src="../img/amazon-logo.jpg" alt="Amazon Logo" class="uk-margin-xlarge-right logo-1">
-                <img src="../img/facebook-logo.jpg" alt="Facebook Logo" class="uk-margin-xlarge-right logo-2">
-                <img src="../img/google-logo.jpg" alt="Google Logo" class="uk-margin-xlarge-right logo-3">
+            <div class="logos uk-flex-center uk-flex-middle uk-margin-medium-top uk-margin-medium-bottom" uk-grid>
+                <img src="../img/amazon-logo.jpg" alt="Amazon Logo" class="logo-1">
+                <img src="../img/facebook-logo.jpg" alt="Facebook Logo" class="logo-2">
+                <img src="../img/google-logo.jpg" alt="Google Logo" class="logo-3">
                 <img src="../img/uber-logo.png" alt="Uber Logo" class="logo-4">
             </div>
         </section>
@@ -223,14 +226,14 @@
     </main>
 
     <!-- FOOTER | START -->
-    <footer class="footer uk-flex uk-flex-center uk-flex-nowrap uk-flex-around uk-child-width-expand@s" uk-height-viewport="offset-bottom: 30" uk-grid>
-        <div class="footer-left uk-flex-flex uk-flex-middle uk-width-1-1@s uk-child-width-expand@s">
+    <footer class="footer uk-flex uk-flex-center uk-flex-around uk-width-1-1 uk-grid-collapse" uk-height-viewport="offset-bottom: 30" uk-grid>
+        <div class="footer-left uk-margin-small-bottom uk-flex-center uk-flex-middle uk-width-1-1@s uk-width-1-1@m uk-width-1-2@l uk-child-width-expand@s">
             <h2>LOGO</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore.</p>
+            <p class="uk-width-1-1@s uk-width-1-2@l">Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore.</p>
             <h3>Design by AndreasDEV. 2019.</h3>
         </div>
-        <div class="footer-right uk-flex uk-child-width-expand@s uk-width-1-1@s" uk-grid>
-            <div class="uk-width-1-4@l">
+        <div class="footer-right uk-flex-center uk-width-1-1@s uk-width-1-1@m uk-width-1-2@l uk-child-width-expand@s" uk-grid>
+            <div class="uk-flex-center fblock">
                 <h4 class="uk-h2">Services</h4>
                 <ul class="uk-list uk-list-large">
                     <li class="uk-h3 fel uk-margin-remove">partners</li>
@@ -239,7 +242,7 @@
                     <li class="uk-h3 fel uk-margin-remove">goals</li>
                 </ul>
             </div>
-            <div class="uk-width-1-4@l"> 
+            <div class="uk-flex-center fblock"> 
                 <h4 class="uk-h2">Quick Nav</h4>
                 <ul class="uk-list uk-list-large">
                     <li class="uk-h3 fel uk-margin-remove">solutions</li>
@@ -248,7 +251,7 @@
                     <li class="uk-h3 fel uk-margin-remove">cards</li>
                 </ul>
             </div>
-            <div class="uk-width-1-4@l">
+            <div class="uk-flex-center fblock">
                 <h4 class="uk-h2">Benefits</h4>
                 <ul class="uk-list uk-list-large">
                     <li class="uk-h3 fel uk-margin-remove">learn with us</li>
@@ -257,7 +260,7 @@
                     <li class="uk-h3 fel uk-margin-remove">affilate</li>
                 </ul>
             </div>
-            <div class="uk-width-1-4@l">
+            <div class="uk-flex-center fblock">
                 <h4 class="uk-h2">Social Media</h4>
                 <ul class="uk-list uk-list-large">
                     <li class="uk-h3 fel uk-margin-remove uk-flex-center"><i class="icon ion-logo-facebook"></i>facebook</li>
